# SPL-System-Programming-course-projects

./: README.md
Assigenment 3 - Server-and-Client-text-based-communication-protocol/: CMakeLists.txt  readme.md
Assigenment 3 - Server-and-Client-text-based-communication-protocol/Client/: CMakeLists.txt
Assigenment 3 - Server-and-Client-text-based-communication-protocol/Client/src/: BBclient.cpp  connectionHandler.cpp
Assigenment 3 - Server-and-Client-text-based-communication-protocol/Server/: pom.xml
Assigenment 3 - Server-and-Client-text-based-communication-protocol/Server/Database/: Movies.json  Users.json
Assigenment 3 - Server-and-Client-text-based-communication-protocol/Server/src/main/java/bgu/spl181/net/api/: MessageEncoderDecoder.java  MessagingProtocol.java
Assigenment 3 - Server-and-Client-text-based-communication-protocol/Server/src/main/java/bgu/spl181/net/api/ClientCommands/: ClientCommandsAbstract.java  LOGINClient.java  REGISTERClient.java  REQUESTclient.java  SIGNOUTClient.java
Assigenment 3 - Server-and-Client-text-based-communication-protocol/Server/src/main/java/bgu/spl181/net/api/ServerCommands/: ACKmsg.java  BROADCASTmsg.java  ERRORmsg.java  commandAbstract.java
Assigenment 3 - Server-and-Client-text-based-communication-protocol/Server/src/main/java/bgu/spl181/net/api/bidi/: BidiMessagingProtocol.java  Connections.java
Assigenment 3 - Server-and-Client-text-based-communication-protocol/Server/src/main/java/bgu/spl181/net/impl/BBreactor/: ReactorMain.java
Assigenment 3 - Server-and-Client-text-based-communication-protocol/Server/src/main/java/bgu/spl181/net/impl/BBtpc/: TPCMain.java
Assigenment 3 - Server-and-Client-text-based-communication-protocol/Server/src/main/java/bgu/spl181/net/impl/Blockbuster/: BidiMessagingProtocolimpl.java  test.java  (+4 more)
Assigenment 3 - Server-and-Client-text-based-communication-protocol/Server/src/main/java/bgu/spl181/net/srv/: BaseServer.java  BlockingConnectionHandler.java  ConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java
Assigenment 3 - Server-and-Client-text-based-communication-protocol/test/: movie.json
Assigenment 3/Client/: CMakeLists.txt  makefile
Assigenment 3/Client/include/: BBclient.h  KeyboardThreade.h  SocketThread.h  connectionHandler.h
Assigenment 3/Client/src/: BBclient.cpp  connectionHandler.cpp  echoClient.cpp
(+165 files in other folders)
